[gd_scene load_steps=4 format=3 uid="uid://dtee3wdqhjxnk"]

[ext_resource type="Script" uid="uid://wqey0l41idtt" path="res://scenes/begin.gd" id="1_ioskq"]
[ext_resource type="Script" uid="uid://drkcbhxv66tk0" path="res://scenes/intro.gd" id="1_yjqpq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjfbp"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yjqpq")

[node name="BG" type="Panel" parent="."]
offset_left = -51.0
offset_top = -32.0
offset_right = 1191.0
offset_bottom = 698.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sjfbp")

[node name="LineFive" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 28.0
offset_top = 448.0
offset_right = 1143.0
offset_bottom = 490.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Then, after the dance ends, you must determine WHO HAS THE BRAIN WORM"
autowrap_mode = 2

[node name="LineFour" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 232.0
offset_top = 356.0
offset_right = 967.0
offset_bottom = 398.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Press [E] to talk to people and interact with objects"

[node name="LineThree" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 207.0
offset_top = 174.0
offset_right = 966.0
offset_bottom = 306.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "And it is up to you to find who has the worm before it's too late"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LineTwo" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 210.0
offset_top = 89.0
offset_right = 969.0
offset_bottom = 131.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "An evil brain worm has been detected at your school"
horizontal_alignment = 1

[node name="LineOne" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 314.0
offset_top = 9.0
offset_right = 840.0
offset_bottom = 51.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "You are a school nurse and it's prom"

[node name="Button" type="Button" parent="."]
offset_left = 458.0
offset_top = 535.0
offset_right = 666.0
offset_bottom = 605.0
theme_override_font_sizes/font_size = 30
text = "Begin ->"
script = ExtResource("1_ioskq")

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
